[package]
name = "libflate"
version = "1.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of DEFLATE algorithm and related formats (ZLIB, GZIP)"
homepage = "https://github.com/sile/libflate"
repository = "https://github.com/sile/libflate"
readme = "README.md"
keywords = ["deflate", "gzip", "zlib"]
categories = ["compression"]
license = "MIT"
edition = "2018"

[badges]
coveralls = {repository = "sile/libflate"}

[dependencies]
adler32 = "1"
crc32fast = "1.1.1"
libflate_lz77 = { path = "libflate_lz77", version = "1.1", default_features = false }
core2 = { version = "0.4", default_features = false, features = ["alloc"], optional = true }

[features]
no_std = ["libflate_lz77/no_std", "core2"]

[dev-dependencies]
clap = "2"

[workspace]
members = ["libflate_lz77"]
exclude = ["flate_bench"]
