[package]
name = "libflate"
version = "2.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of DEFLATE algorithm and related formats (ZLIB, GZIP)"
homepage = "https://github.com/sile/libflate"
repository = "https://github.com/sile/libflate"
readme = "README.md"
keywords = ["deflate", "gzip", "zlib"]
categories = ["compression", "no-std"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/libflate"}

[dependencies]
adler32 = { version = "1", default-features = false }
crc32fast = { version = "1.1.1", default-features = false }
dary_heap = "0.3.5"
libflate_lz77 = { path = "libflate_lz77", version = "2.1.0", default-features = false }
core2 = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["libflate_lz77/std", "core2/std"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

[workspace]
members = ["libflate_lz77"]
exclude = ["flate_bench"]
