[package]
name = "libflate_lz77"
version = "1.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "LZ77 encoder for libflate crate"
homepage = "https://github.com/sile/libflate"
repository = "https://github.com/sile/libflate"
readme = "README.md"
keywords = ["lz77"]
categories = ["compression"]
license = "MIT"

[badges]
coveralls = {repository = "sile/libflate"}

[dependencies]
rle-decode-fast = "1.0.0"
core2 = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
hashbrown = { version = "0.13", optional = true }

[dev-dependencies]
libflate = { path = "../", version = "1" }

[features]
no_std = ["core2", "hashbrown"]
