[package]
name = "libflate_lz77"
version = "2.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2021"
description = "LZ77 encoder for libflate crate"
homepage = "https://github.com/sile/libflate"
repository = "https://github.com/sile/libflate"
readme = "README.md"
keywords = ["lz77"]
categories = ["compression"]
license = "MIT"

[badges]
coveralls = {repository = "sile/libflate"}

[dependencies]
rle-decode-fast = "1.0.0"
core2 = { version = "0.4", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14" }

[dev-dependencies]
libflate = { path = "../", version = "2.0", default-features = false }

[features]
default = ["std"]
std = ["core2/std", "libflate/std"]
